# wp-theme-agent

./: .env  .env.example  .gitignore  AGENTS.md  README.md  ai_agent_validation_research.md  main.py  pyproject.toml  report.md  run.py  test_glm.py  test_minimax.py  wp_functions.md
app/: api.py  main.py  models.py
app/agent/: clients.py  graph.py  llm_utils.py  loop.py  models.py  state.py  tokens.py
app/agent/nodes/: analyzer.py  deployer.py  generator.py  planner.py  validator.py  writer.py
app/agent/prompts/: analyzer.py  deployer.py  generator.py  planner.py  system_prompt.py  validator.py
app/agent/tools/: __init__.py  _paths.py  acf.py  base_theme.py  copy.py  core.py  edit_file.py  phpcs_checker.py  schema.py  search.py  theme_validator.py
app/api/: main.py
app/api/routes/: convert.py  health.py  upload.py
app/core/: config.py
companion-plugin/: wp-theme-agent-deploy.php
deep agents/: README.md  app.py  test_rapidflow.py
deep agents/agents/: __init__.py  sub_agents.py
deep agents/prompts/: __init__.py  orchestrator_prompt.py
deep agents/tools/: __init__.py  _paths.py  acf.py  base_theme.py  php_checker.py  theme_validator.py
deep agents/workspaces/rapidflow-plumbing/: 404.php  archive.php  comments.php  footer.php  functions.php  header.php  index.php  page.php  search.php  sidebar.php  single.php
deep agents/workspaces/uploads/: contact.html  index.html  reviews.html  services.html
examples/upload/: index.html  script.js  style.css
frontend/: index.html
test-upload/: index.html  script.js  style.css
ui/: index.html
(+49 files in other folders)
